load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_prefix", "go_test")

go_prefix("github.com/kevinburke/twilio-go")

go_library(
    name = "go_default_library",
    srcs = [
        "accounts.go",
        "alert_descriptions.go",
        "alerts.go",
        "applications.go",
        "available_phone_numbers.go",
        "calls.go",
        "codes.go",
        "conferences.go",
        "doc.go",
        "fax.go",
        "http.go",
        "http_ctx.go",
        "http_noctx.go",
        "keys.go",
        "lookup.go",
        "media.go",
        "media_go17.go",
        "media_goprevious.go",
        "messages.go",
        "notify.go",
        "notify_credentials.go",
        "outgoingcallerids.go",
        "page.go",
        "participants.go",
        "phonenumbers.go",
        "prices_messaging.go",
        "prices_number.go",
        "prices_voice.go",
        "queue.go",
        "recording.go",
        "transcription.go",
        "types.go",
        "validation.go",
        "wireless.go",
        "wireless_commands.go",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_kevinburke_go_types//:go_default_library",
        "@com_github_kevinburke_rest//:go_default_library",
        "@com_github_ttacon_libphonenumber//:go_default_library",
        "@org_golang_x_net//context:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = [
        "accounts_test.go",
        "alerts_test.go",
        "applications_test.go",
        "available_phone_numbers_test.go",
        "calls_test.go",
        "conferences_test.go",
        "fax_test.go",
        "http_test.go",
        "lookup_test.go",
        "media_test.go",
        "messages_test.go",
        "notify_credentials_test.go",
        "outgoingcallerids_test.go",
        "phonenumbers_test.go",
        "prices_messaging_test.go",
        "prices_number_test.go",
        "prices_voice_test.go",
        "recording_test.go",
        "responses_test.go",
        "transcription_test.go",
        "types_test.go",
        "validation_test.go",
        "wireless_commands_test.go",
        "wireless_test.go",
    ],
    library = ":go_default_library",
    deps = ["@com_github_kevinburke_rest//:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = [
        "alerts_example_test.go",
        "example_messages_test.go",
        "example_numbers_test.go",
        "example_test.go",
        "wireless_example_test.go",
    ],
    deps = [
        "//:go_default_library",
        "@com_github_kevinburke_rest//:go_default_library",
    ],
)
