load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["datausage.go"],
    visibility = ["//visibility:public"],
    deps = [
        "//:go_default_library",
        "@com_github_kevinburke_go_types//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)
