load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "access_token.go",
        "access_token_grant.go",
    ],
    importpath = "github.com/kevinburke/twilio-go/token",
    visibility = ["//visibility:public"],
    deps = ["@com_github_dgrijalva_jwt_go//:go_default_library"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = [
        "access_token_grant_test.go",
        "access_token_test.go",
    ],
    embed = [":go_default_library"],
    importpath = "github.com/kevinburke/twilio-go/token",
    deps = ["@com_github_dgrijalva_jwt_go//:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = ["example_test.go"],
    importpath = "github.com/kevinburke/twilio-go/token_test",
    deps = [":go_default_library"],
)
