load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["capabilities.go"],
    importpath = "github.com/kevinburke/twilio-go/twilioclient",
    visibility = ["//visibility:public"],
    deps = ["@com_github_dgrijalva_jwt_go//:go_default_library"],
)

go_test(
    name = "go_default_test",
    timeout = "short",
    srcs = ["capabilities_test.go"],
    importpath = "github.com/kevinburke/twilio-go/twilioclient",
    library = ":go_default_library",
    deps = ["@com_github_dgrijalva_jwt_go//:go_default_library"],
)

go_test(
    name = "go_default_xtest",
    timeout = "short",
    srcs = ["example_test.go"],
    importpath = "github.com/kevinburke/twilio-go/twilioclient_test",
    deps = [":go_default_library"],
)
