load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "github.com/kevinburke/twilio-go/cmd/report-data-usage",
    visibility = ["//visibility:private"],
    deps = [
        "//:go_default_library",
        "//datausage:go_default_library",
        "@com_github_kevinburke_go_types//:go_default_library",
        "@org_golang_x_sync//errgroup:go_default_library",
    ],
)

go_binary(
    name = "report-data-usage",
    importpath = "github.com/kevinburke/twilio-go/cmd/report-data-usage",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
